# Game-of-Life

./: .gitignore  CMakeLists.txt  build.ps1  readme.md
src/: board.c  cell.c  colors.c  functions.c  main.c  randbtn.c  simulation.c
src/functions/: functions.c  functions.h
src/include/: cell.h  colors.h  functions.h  randbtn.h  simulation.h
